feat(admin): add client/server side form validation for add_project and edit_project

--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -10,53 +10,50 @@
         </div>
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <form action="{{ url_for('add_project') }}" method="POST" enctype="multipart/form-data" id="dropzoneForm">
+        <form action="{{ url_for('add_project') }}" method="POST" id="dropzoneForm">
+            {{ form.csrf_token }}
             <div class="card-header">
                 <h4 class="text-center">New</h4>
             </div>
             <div class="card-body">
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="title" name="title" placeholder="New Project Title">
-                    <label for="title">Title</label>
+                    {{ form.title(class="form-control", placeholder="Title") }}
+                    {{ form.title.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="slug" name="slug" placeholder="new-project-title"
-                        readonly="readonly">
-                    <label for="slug">Slug</label>
+                    {{ form.slug(class="form-control", readonly="readonly", placeholder="Slug") }}
+                    {{ form.slug.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="tech" name="tech" placeholder="HTML, CSS">
-                    <label for="tech">Technologies Used</label>
+                    {{ form.tech(class="form-control", placeholder="Technologies Used") }}
+                    {{ form.tech.label }}
                     <small class="text-muted">Separated by comma.</small>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="repo" name="repo"
-                        placeholder="http://www.github.com/...">
-                    <label for="repo">Source code (repository url)</label>
+                    {{ form.repo(class="form-control", placeholder="Source Code (repository URL)") }}
+                    {{ form.repo.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="live_url" name="live_url"
-                        placeholder="http://www.website.com">
-                    <label for="live_url">Live URL</label>
+                    {{ form.live_url(class="form-control", placeholder="Live URL") }}
+                    {{ form.live_url.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <textarea class="form-control" rows="3" id="description" name="description" style="height: 100px;"
-                        placeholder="..."></textarea>
-                    <label for="description">Description</label>
+                    {{ form.description(class="form-control", placeholder="Description") }}
+                    {{ form.description.label }}
                 </div>
-                <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
-                <input type="hidden" id="collection" value="projects">
-                <input type="hidden" name="photo-list" id="photo-list">
+                {{ form.url_for_files(value="%s" | format(url_for('files'))) }}
+                {{ form.collection(value="projects") }}
+                {{ form.photo_list() }}
                 <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
                 <div id="drop-area" data-multiple="true">
                     <i class="bi bi-upload"></i>
-                        Drag&drop files here or click to select...
+                    Drag&drop files here or click to select...
                 </div>
                 <div id="gallery" class="row"></div>
             </div>
             <div class="card-footer text-center d-flex justify-content-between">
                 <a href="{{ url_for('get_projects') }}" class="btn btn-lg btn-danger">Cancel</a>
-                <button type="submit" class="btn btn-lg btn-accent" id="submit-form">Add</button>
+                {{ form.submit(class="btn btn-lg btn-accent", id="submit-form") }}
             </div>
         </form>
     </div>
