--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <form action="{{ url_for('add_blog') }}" method="POST">
+        <form action="{{ url_for('add_blog') }}" method="POST" id="dropzoneForm">
             {{ form.csrf_token }}
             <div class="card-header">
                 <h4 class="text-center">New</h4>
@@ -24,13 +24,11 @@
                     {{ form.title.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    {{ form.slug(class="form-control", placeholder="Slug") }}
+                    {{ form.slug(class="form-control", readonly="readonly", placeholder="Slug") }}
                     {{ form.slug.label }}
                 </div>
                 {{ form.url_for_files(value="%s" | format(url_for('files'))) }}
-                <input type="hidden" id="collection" value="blogs">
                 {{ form.collection(value="blogs") }}
-                <input type="hidden" name="photo-list" id="photo-list">
                 {{ form.photo_list() }}
                 <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
                 <div id="drop-area" data-multiple="true">
