--- a/templates/admin/edit_project.html
+++ b/templates/admin/edit_project.html
@@ -16,43 +16,41 @@
         <div class="col-md-7">
             <div class="card">
                 <form action="{{ url_for('edit_project', id=project._id) }}" method="POST">
+                    {{ form.csrf_token }}
                     <div class="card-header">
                         <h4 class="text-center">Edit</h4>
                     </div>
                     <div class="card-body">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="title" name="title" value="{{ project.title }}">
-                            <label for="title">Title</label>
+                            {{ form.title(class="form-control", value="%s" | format(project.title)) }}
+                            {{ form.title.label }}
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="hidden" id="initial-slug" value="{{ project.slug }}">
-                            <input type="text" class="form-control" id="slug" name="slug" value="{{ project.slug }}"
-                                readonly="readonly">
-                            <label for="slug">Slug</label>
+                            {{ form.initial_slug(value="%s" | format(project.slug)) }}
+                            {{ form.slug(class="form-control", readonly="readonly", value="%s" | format(project.slug)) }}
+                            {{ form.slug.label }}
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="tech" name="tech" value="{{ project.tech }}">
-                            <label for="tech">Technologies Used</label>
+                            {{ form.tech(class="form-control", placeholder="Technologies Used", value="%s" | format(project.tech)) }}
+                            {{ form.tech.label }}
                             <small class="text-muted">Separated by comma.</small>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="repo" name="repo" value="{{ project.repo }}">
-                            <label for="repo">Source code (repository url)</label>
+                            {{ form.repo(class="form-control", value="%s" | format(project.repo)) }}
+                            {{ form.repo.label }}
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="live_url" name="live_url"
-                                value="{{ project.live_url }}">
-                            <label for="live_url">Live URL</label>
+                            {{ form.live_url(class="form-control", value="%s" | format(project.live_url)) }}
+                            {{ form.live_url.label }}
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea class="form-control" rows="3" id="description" name="description"
-                                style="height: 100px;">{{ project.description }}</textarea>
-                            <label for="description">Description</label>
+                            {{ form.description(class="form-control", value="%s" | format(project.description)) }}
+                            {{ form.description.label }}
                         </div>
                     </div>
                     <div class="card-footer text-center d-flex justify-content-between">
                         <a href="{{ url_for('get_projects') }}" class="btn btn-lg btn-danger">Cancel</a>
-                        <button type="submit" class="btn btn-lg btn-accent confirm">Update</button>
+                        {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
                     </div>
                 </form>
             </div>
@@ -67,17 +65,19 @@
                     <div id="gallery" class="row">
                         {% if project.photos|length %}
                         {% set photos = project.photos.split(',') %}
-                            {% for photo in photos %}
-                            <div class="photo-container col-sm-4 col-md-6 col-lg-4">
-                                <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                        {% for photo in photos %}
+                        <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                            <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
                                 class="{{ project.slug }}-gallery">
-                                    <img class="img-thumbnail gallery-item" src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}" alt="Photo {{ loop.index }}">
-                                </a>
-                                <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
-                                    <i class="bi bi-trash-fill"></i>
-                                </a>
-                            </div>
-                            {% endfor %}
+                                <img class="img-thumbnail gallery-item"
+                                    src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                    alt="Photo {{ loop.index }}">
+                            </a>
+                            <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </div>
+                        {% endfor %}
                         {% endif %}
                     </div>
                     <div class="mb-3">
