feat(admin): add validation to Add, edit, update Education forms and finish validation for Skills

--- a/templates/admin/edit_education.html
+++ b/templates/admin/edit_education.html
@@ -11,40 +11,39 @@
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <form action="{{ url_for('edit_education', id=school._id) }}" method="POST">
+            {{ form.csrf_token }}
             <div class="card-header">
                 <h4 class="text-center">Edit</h4>
             </div>
             <div class="card-body">
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="school" name="school" value="{{ school.school }}">
-                    <label for="school">School</label>
+                    {{ form.school(class="form-control", value="%s" | format(school.school)) }}
+                    {{ form.school.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="period" name="period" value="{{ school.period }}">
-                    <label for="period">Period of study</label>
+                    {{ form.period(class="form-control", value="%s" | format(school.period)) }}
+                    {{ form.period.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="title" name="title" value="{{ school.title }}">
-                    <label for="title">Title/Award</label>
+                    {{ form.title(class="form-control", value="%s" | format(school.title)) }}
+                    {{ form.title.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="department" name="department"
-                        value="{{ school.department }}">
-                    <label for="department">Department</label>
+                    {{ form.department(class="form-control", value="%s" | format(school.department)) }}
+                    {{ form.department.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <textarea class="form-control" rows="3" id="description" name="description"
-                        style="height: 100px;">{{ school.description }}</textarea>
-                    <label for="description">Description</label>
+                    {{ form.description(class="form-control") }}
+                    {{ form.description.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="number" class="form-control" id="order" name="order" value="{{ school.order }}">
-                    <label for="order">Sort Order</label>
+                    {{ form.order(class="form-control", value="%s" | format(school.order)) }}
+                    {{ form.order.label }}
                 </div>
             </div>
             <div class="card-footer text-center d-flex justify-content-between">
                 <a href="{{ url_for('get_education') }}" class="btn btn-lg btn-danger">Cancel</a>
-                <button type="submit" class="btn btn-lg btn-accent confirm">Update</button>
+                {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
             </div>
         </form>
     </div>
