--- a/templates/admin/edit_project.html
+++ b/templates/admin/edit_project.html
@@ -44,7 +44,7 @@
                             {{ form.live_url.label }}
                         </div>
                         <div class="form-floating mb-3">
-                            {{ form.description(class="form-control", value="%s" | format(project.description)) }}
+                            {{ form.description(class="form-control") }}
                             {{ form.description.label }}
                         </div>
                     </div>
