--- a/templates/admin/skills.html
+++ b/templates/admin/skills.html
@@ -26,7 +26,7 @@
                     <div class="row w-100 align-items-center">
                         <div class="col-12 col-md-6">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="name[{{ skill._id }}]" name="name[{{ skill._id }}]" value="{{ skill.name }}">
+                                <input type="text" class="form-control" id="name[{{ skill._id }}]" name="name[{{ skill._id }}]" value="{{ skill.name }}" required>
                                 <label for="name[{{ skill._id }}]">Skill</label>
                             </div>
                         </div>
