--- a/templates/admin/education.html
+++ b/templates/admin/education.html
@@ -36,7 +36,7 @@
                         <div class="col-12 col-md-3 col-lg-1">
                             <div class="form-floating mb-3 mb-sm-0">
                                 <input type="number" class="form-control mb-0" id="order[{{ school._id }}]"
-                                    name="order[{{ school._id }}]" value="{{ school.order }}">
+                                    name="order[{{ school._id }}]" value="{{ school.order }}" required>
                                 <label for="order[{{ school._id }}]">Order</label>
                             </div>
                         </div>
