--- a/templates/admin/experience.html
+++ b/templates/admin/experience.html
@@ -35,7 +35,7 @@
                         <div class="col-12 col-md-3 col-lg-1">
                             <div class="form-floating mb-3 mb-sm-0">
                                 <input type="number" class="form-control mb-0" id="order[{{ job._id }}]"
-                                    name="order[{{ job._id }}]" value="{{ job.order }}">
+                                    name="order[{{ job._id }}]" value="{{ job.order }}" required>
                                 <label for="order[{{ job._id }}]">Order</label>
                             </div>
                         </div>
