--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -111,7 +111,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{{ url_for('settings') }}">
+                            <a class="nav-link" aria-current="page" href="{{ url_for('get_settings') }}">
                                 <i class="bi bi-sliders"></i>
                                 Settings
                             </a>
@@ -136,22 +136,24 @@
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <!-- flash messages -->
-                <div class="toast-container position-absolute top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
+                <div class="toast-container position-absolute top-1 start-50 translate-middle-x p-3 w-75"
+                    style="z-index: 5">
                     {% with messages = get_flashed_messages(with_categories=true) %}
-                        {% if messages %}
-                            {% for category, message in messages %}
-                                <div class="d-flex w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
-                                    <span class="m-auto px-2">
-                                        <i class="bi bi-bell-fill"></i>
-                                    </span>
-                                    <div class="toast-body">
-                                        <h4>{{ message }}</h4>
-                                    </div>
-                                    <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
-                                            class="bi bi-x-circle"></i></a>
-                                </div>
-                            {% endfor %}
-                        {% endif %}
+                    {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="d-flex w-100 toast bg-{{ category }}" role="alert" aria-live="assertive"
+                        aria-atomic="true">
+                        <span class="m-auto px-2">
+                            <i class="bi bi-bell-fill"></i>
+                        </span>
+                        <div class="toast-body">
+                            <h4>{{ message }}</h4>
+                        </div>
+                        <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
+                                class="bi bi-x-circle"></i></a>
+                    </div>
+                    {% endfor %}
+                    {% endif %}
                     {% endwith %}
                 </div>
                 {% block content %}
